# podmind-agent

./: .env.example  .gitignore  README.md  pyproject.toml
src/podmind/: config.py  downloader.py  io_utils.py  main.py  scraper.py  summarizer.py
src/podmind/prompts/: summary.txt
src/podmind/transcriber/: __init__.py  _shared.py
src/podmind/transcriber/backends/: base.py  mlx_qwen.py  mlx_whisper.py  qwen.py
tests/: test_config.py  test_downloader.py  test_prompt.py  test_scraper.py  test_summarizer.py  test_transcriber.py
